# langgraph-fastapi-assistant-ui

./: AGENTS.md  BRANCHING_E2E_TESTS.md  External Store Runtime.md  FLOW.md  LANGGRAPH_RESEARCH_1.md  LANGGRAPH_RESEARCH_2.md  LANGGRAPH_RESEARCH_3.md  LANGGRAPH_RESEARCH_SUMMARY.md  MEMORY.md  PASTE_THIS_FOR_INTEGRATION.md  PROGRESS.md  README.md  RepositoryCondition.md  ResearchImplementationPlan.md  TASK.md  WELCOME_PAGE.md  opencode.json
backend/: .gitignore  main.py  pyproject.toml
backend/agent/: graph.py  model.py  prompt.py  tools.py  utils.py
backend/data/threads/: 01a86183-a992-4255-aba9-5040f8ec9290.json  39cf2822-e0a8-4ba5-b1fa-c51473e43624.json  5e759a48-731e-4a28-8a20-57d01a5f12a8.json  86acc7c6-e566-4fcf-8a49-66468d375b78.json  __LOCALID_0vV9Pj9.json  __LOCALID_Koawbu4.json  __LOCALID_MGY2EJK.json  __LOCALID_RD2JoRy.json  __LOCALID_j614j9d.json  __LOCALID_pBVSs3C.json  __LOCALID_zkLkYae.json  c1a00c7e-b81a-4d04-97ad-88f1934800c2.json  d005c7f9-780f-454e-ba00-8ab13745fb86.json  e6b2cea4-a87e-4092-ad6f-0c8ac48a4b83.json
backend/lib/: auth.py  blob.py  checkpointer.py  database.py  db_connection.py  thread_repo_store.py  thread_store.py
backend/lib/external_store_langgraph/: __init__.py  thread_routes.py
backend/routes/: assistant.py  attachment.py  chat.py  thread.py  thread_repo.py
frontend/: package.json
frontend/app/: assistant.tsx  layout.tsx  page.tsx  runtime-provider.tsx  welcome-page.tsx  welcome.tsx
scripts/: data-stream.sample.txt  explore-data-stream.mjs  explore-edit-branching.mjs  test_backend_contract.py  test_frontend_contract.mjs
(+36 files in other folders)
